--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,8 +1,10 @@
 # config/config.yaml
 domain_config:
   # 是否启用域名url，是-从domain_url里获取域名列表；否-使用domains作为域名列表
+  # POST application/json
+  # 返回参数示例：{"code":200,"data": ["abc.example.com:443"]}
   enabled_domain_url: true
-  domain_url: https://www.example.com/api/domain_list
+  domain_url: https://api.example.com/api/domain/list
   list: # 要监控的域名列表
     - "www.baidu.com:443"
     - "www.qq.com"
